--- a/css/estilos_globales.css
+++ b/css/estilos_globales.css
@@ -1,8 +1,123 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body, html{
+    background-color: white;
+    height: 100%;
+}
+
 .btn_opciones_G{
     border: none;
     cursor: pointer;
+    font-family: Arial;
 }
 
 .campo_busqueda_G{
+    font-size: 20px;
+}
 
+#cabecera{
+    width: 100%;
+    height: 100px;
+    background-color: aquamarine;
+    position: fixed;
+}
+    #busqueda{
+        width: 100%;
+        height: 50px;
+        background-color: darkslategray;
+    }
+        #btn_buscar{
+            float: left;
+            margin-left: 20px;
+            padding: 15px 15px;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: transparent;
+            color: white;
+        }
+        #campo_busqueda{
+            width: 40%;
+            height: 25px;
+            margin-top: 10px;
+        }
+        #logo_principal{
+            float: right;
+            margin-right: 20px;
+            padding: 15px 15px;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: transparent;
+            color: white;
+        }
+
+    #opciones{
+        width: 100%;
+        height: 50px;
+        background-color: black;
+    }
+        #btn_carrito{
+            float: left;
+            margin-left: 20px;
+            padding: 16px 16px;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: transparent;
+            color: white;
+        }
+
+        #btn_inicio{
+            float: right;
+            margin-right: 20px;
+            padding: 16px 16px;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: transparent;
+            color: white;
+        }
+
+        #btn_registro{
+            float: right;
+            margin-right: 20px;padding: 16px 16px;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: transparent;
+            color: white;
+        }
+
+        #btn_cerrar{
+            float: right;
+            margin-right: 20px;
+            padding: 16px 16px;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: transparent;
+            color: white;
+        }
+
+#contenido{
+
+    width: 100%;
+    height: 400px;
+    background-color: white;
+    /*Contenedores Hijos Centrados*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+    #libros{
+        width: 80%;
+        height: 300px;
+        background-color: powderblue;
+    }
+
+#pie{
+    width: 100%;
+    height: 150px;
+    background-color: darkslategray;
+    margin-top: 120px;
 }
