--- a/css/estilos_globales.css
+++ b/css/estilos_globales.css
@@ -6,6 +6,7 @@
 body, html{
     background-color: white;
     height: 100%;
+    padding-top: 50px;
 }
 
 .btn_opciones_G{
@@ -22,6 +23,10 @@ body, html{
     width: 100%;
     height: 100px;
     background-color: aquamarine;
+    position: static;
+
+    left: 0;
+    top: 0;
     position: fixed;
 }
     #busqueda{
@@ -39,11 +44,20 @@ body, html{
             color: white;
         }
         #campo_busqueda{
-            width: 40%;
+            width: 25%;
             height: 25px;
             margin-top: 10px;
         }
         #logo_principal{
+            float: right;
+            margin-right: 20px;
+            padding: 15px 15px;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: transparent;
+            color: white;
+        }
+        #bienvenido{
             float: right;
             margin-right: 20px;
             padding: 15px 15px;
@@ -96,6 +110,24 @@ body, html{
             background-color: transparent;
             color: white;
         }
+        #btn_ordenes{
+            float: right;
+            margin-right: 20px;
+            padding: 16px 16px;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: transparent;
+            color: white;
+        }
+        #btn_libros{
+            float: right;
+            margin-right: 20px;
+            padding: 16px 16px;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: transparent;
+            color: white;
+        }
 
 #contenido{
 
@@ -106,13 +138,13 @@ body, html{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
 }
 
     #libros{
-        width: 80%;
-        height: 300px;
+        width: 85%;
+        height: 500px;
         background-color: powderblue;
+        margin-top: 100px;
     }
 
 #pie{
