--- a/css/libro.css
+++ b/css/libro.css
@@ -12,7 +12,7 @@
         width: 85%;
         height: 100%;
         background-color: powderblue;
-        margin-top: 220px;
+        margin-top: 50px;
     }
         #imagen_libro{
             float: left;
@@ -62,6 +62,13 @@
                 font-weight: bold;
             }
             #agregar_carrito{
+                padding: 15px 15px;
+                font-size: 17px;
+                font-weight: bold;
+                background-color: slategrey;
+                color: white;
+            }
+            #compra_proveedor{
                 padding: 15px 15px;
                 font-size: 17px;
                 font-weight: bold;
