Consultas y modificaciones de libros

--- a/css/libro.css
+++ b/css/libro.css
@@ -11,14 +11,14 @@
     #libro_todo{
         width: 85%;
         height: 100%;
-        background-color: powderblue;
+        background-color: transparent;
         margin-top: 50px;
     }
         #imagen_libro{
             float: left;
             width: 33%;
             height: 60%;
-            background-color: grey;
+            background-color: transparent;
 
             /*Contenedores Hijos Centrados*/
             display: flex;
@@ -29,7 +29,7 @@
                 width: 272px;
                 height: 464px;
 
-                background-image: url("./../Recursos/italiano.jpg");
+                /*background-image: url("./../Recursos/italiano.jpg");*/
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
@@ -38,7 +38,7 @@
             float: left;
             width: 34%;
             height: 60%;
-            background-color: lightyellow;
+            background-color: transparent;
         }
             #titulo{
                 padding: 20px 20px;
@@ -46,17 +46,18 @@
                 font-size: 35px;
                 font-weight: bold;
             }
-            #info{
+            .info{
                 padding: 20px 20px;
                 font-family: Calibri;
                 font-size: 20px;
+                line-height: 15px;
             }
 
         #pago{
             float: left;
             width: 33%;
             height: 60%;
-            background-color: lightpink;
+            background-color: transparent;
 
             display: grid;
             justify-content: center;
@@ -73,14 +74,14 @@
                 padding: 15px 15px;
                 font-size: 17px;
                 font-weight: bold;
-                background-color: slategrey;
+                background-color: darkcyan;
                 color: white;
             }
             #compra_proveedor{
                 padding: 15px 15px;
                 font-size: 17px;
                 font-weight: bold;
-                background-color: slategrey;
+                background-color: darkcyan;
                 color: white;
             }
 
@@ -88,6 +89,23 @@
             float: left;
             width: 100%;
             height: 40%;
-            background-color: lightskyblue;
+            background-color: transparent;
+            margin-top: 100px;
         }
+            .c_btn_rec{
+                float: left;
+                padding: 1px 25px;
+                font-size: 15px;
+                background-color: darkcyan;
+                color: white;
+                margin-right: 30px;
+            }
+
+            .c_titulo_rec{
+                font-size: 15px;
+                font-weight: normal;
+                text-align: center;
+                justify-content: center;
+                align-items: center;
+            }
 
