--- a/css/estilos_globales.css
+++ b/css/estilos_globales.css
@@ -9,6 +9,20 @@ body, html{
     padding-top: 50px;
 }
 
+table {
+    font-family: Calibri;
+    font-size: 20px;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  tr, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+
 .btn_opciones_G{
     border: none;
     cursor: pointer;
@@ -141,15 +155,46 @@ body, html{
 }
 
     #libros{
-        width: 85%;
+        width: 80%;
         height: 500px;
-        background-color: powderblue;
-        margin-top: 100px;
+        background-color: transparent;
+        margin-top: 150px;
+        overflow-y: scroll;
     }
 
 #pie{
     width: 100%;
     height: 150px;
     background-color: darkslategray;
-    margin-top: 120px;
+    margin-top: 150px;
 }
+
+
+#btn_lib{
+    float: left;
+    margin-left: 20px;
+    padding: 15px 15px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: darkcyan;
+    color: white;
+}
+
+#btn_lib_quitar{
+
+    float: left;
+    margin-left: 20px;
+    padding: 15px 15px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: darkred;
+    color: white;
+}
+
+.ocultos{
+
+    visibility: hidden;
+    display: none;
+}
+
+
