Control de ordenes y diseños de formularios

--- a/css/ordenes.css
+++ b/css/ordenes.css
@@ -2,16 +2,55 @@ body, html{
     margin-top: 50px;
 }
 
+#libros{
+    width: 95%;
+    height: 400px;
+    margin-top: 1px;
+}
+
 #ordenes{
     float: left;
-    width: 50%;
-    height: 100%;
-    background-color: lightgreen;
+    width: 100%;
+    height: 50%;
+    background-color: transparent;
+    overflow: scroll;
 }
 
 #pedidos{
     float: left;
-    width: 50%;
-    height: 100%;
-    background-color: lightpink;
+    width: 100%;
+    height: 50%;
+    background-color: transparent;
+    overflow: scroll;
 }
+
+table {
+    font-family: Calibri;
+    font-size: 15px;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  tr, th, td {
+    border: 1px solid #dddddd;
+    text-align: center;
+    padding: 8px;
+  }
+  
+
+  #btn_lib_ord{
+    float: left;
+    padding: 5px 5px;
+    font-size: 10px;
+    font-weight: bold;
+    background-color: darkcyan;
+    color: white;
+}
+
+/*
+SELECT id_libro_fk, SUM( importe ) AS total
+FROM  pedido
+GROUP BY id_libro_fk
+ORDER BY total DESC LIMIT 3;
+
+*/
