--- a/css/estilos_globales.css
+++ b/css/estilos_globales.css
@@ -22,6 +22,23 @@ table {
     padding: 8px;
   }
   
+  .forms{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+  }
+
+  .btn_forms{
+    padding: 5px 5px;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: darkcyan;
+    color: white;
+  }
 
 .btn_opciones_G{
     border: none;
@@ -196,5 +213,10 @@ table {
     visibility: hidden;
     display: none;
 }
+
+::-webkit-scrollbar {
+    display: none;  /* Ocultar scroll */
+}
+
 
 
