--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,25 @@
 #imagen{
     width: 100%;
     height: 250px;
-    background-color: rebeccapurple;
+    background-color: transparent;
     background-image: url("./../Recursos/libros.jpg");
+}
+
+.c_btn_rec{
+    float: left;
+    padding: 1px 25px;
+    font-size: 15px;
+    background-color: darkcyan;
+    color: white;
+    margin-right: 30px;
+}
+
+#libros{
+    margin-top: 250px;
+}
+
+#pie{
+    margin-top: 200px;
 }
 
 #btn_inicio{
